# textpod

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE_CHECKLIST.md  docker-compose.yml
.github/workflows/: build_gnu_linux.yml  build_macos.yml  build_windows.yml  cd.yml  ci.yml  rust.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf
src/: index.html  main.rs
