[package]
name = "textpod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
comrak = "0.29"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
clap = { version = "4.4", features = ["derive"] }
